--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,5 +6,6 @@ jobs:
     name: PHPUnit
     runs-on: ubuntu-latest
     steps:
+      - run: touch /github/workspace/database/database.sqlite
       - uses: actions/checkout@v1
       - uses: nathanheffley/laravel-phpunit-action@master
